--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -152,41 +152,9 @@ video {
   max-width: 20vw;
 }
 
-@media (max-width: 1080px) {
-.container img {
-  max-width: 100vw;
-  height: auto;
-}
-
-.container p {
-  color: white;
-  font-family: "Funnel Sans", sans-serif;
-  font-size: 28px;
-  font-weight: 200;
-}
-
-video {
-  max-width: 100vw;
-  height: auto;
-}
-
-.miniGallery {
-  display: grid;
-  grid-template-columns: repeat(1,3fr);
-  gap: 0.5%;
-  margin-left: 10vw;
-  margin-right: 10vw;
-  margin-bottom: 5vh;
-}
-
-.miniGallery img {
-  max-width: 50vw;
-}
-}
-
 .main {
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
   color: white;
   margin-top: 2vh;
   margin-left: 5%;
@@ -270,32 +238,6 @@ h3 {
   margin: 0;
 }
 
-@media (max-width: 1080px) {
-  .header {
-    margin-top: 0;
-    margin-bottom: 2vh;
-    padding: 0 20px;
-    text-align: center;
-  }
-
-  h1 {
-    font-size: 48px;
-    line-height: 50px;
-  }
-
-  h3 {
-    font-size: 24px;
-  }
-}
-
-@media (max-width: 1080px) {
-  .nav {
-    justify-content: space-between;
-    padding: 10px 20px;
-    margin-bottom: 10px;
-  }
-} */
-
 .buttonContainer {
 margin-top: 2%;
 }
@@ -344,24 +286,13 @@ margin-top: 2%;
   box-shadow: 0 0 12px rgb(64, 196, 123);
 }
 
-@media (max-width: 1080px) {
-  .buttonContainer {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    margin-top: 10px;
-    padding: 0 20px;
-    gap: 10px;
-  }
-
-  .buttonContainer button {
-    width: 100%;
-    font-size: 14px;
-    padding: 14px 20px;
-    margin: 0;
-  }
+.buttonContainer button.active#magic {
+  background-color: rgb(233, 194, 85);
+  color: #000;
+  box-shadow: 0 0 12px rgb(233, 194, 85);
 }
+
+
 
 .gallery {
   margin-top: 2%;
@@ -371,6 +302,7 @@ margin-top: 2%;
   row-gap: 30px;
   padding: 0 20px;
   max-width: 100%;
+  min-height: 100vh;
   width: 100%;
   box-sizing: border-box;
   justify-items: center;
@@ -385,10 +317,20 @@ margin-top: 2%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-    transition: opacity 0.5s ease;
-      cursor: pointer;
-      padding: 20px;
-      border-radius: 0.5em;
+  transition: opacity 0.5s ease;
+  cursor: pointer;
+  padding: 20px;
+  border-radius: 0.5em;
+  position: relative;
+}
+
+.image-card.magic::after {
+  content: "⭐";
+  font-size: 2rem;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  pointer-events: none;
 }
 
 .image-card:hover {
@@ -538,7 +480,95 @@ margin-top: 2%;
 }
 
 @media (max-width: 1080px) {
-  .footer1 {
+
+  .nav {
+    justify-content: space-between;
+    padding: 10px 20px;
+    margin-bottom: 10px;
+  }
+
+  .main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  color: white;
+  margin-top: 2vh;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 10%;
+}
+
+.main img {
+  margin-left: 2vh;
+  margin-top: 2vh;
+  height: auto;
+  width: 20vh;
+}
+
+  .header {
+    margin-top: 0;
+    margin-bottom: 2vh;
+    padding: 0 20px;
+    text-align: center;
+  }
+
+  .container img {
+  max-width: 100vw;
+  height: auto;
+}
+
+.container p {
+  color: white;
+  font-family: "Funnel Sans", sans-serif;
+  font-size: 28px;
+  font-weight: 200;
+}
+
+video {
+  max-width: 100vw;
+  height: auto;
+}
+
+.miniGallery {
+  display: grid;
+  grid-template-columns: repeat(1,3fr);
+  gap: 0.5%;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  margin-bottom: 5vh;
+}
+
+.miniGallery img {
+  max-width: 50vw;
+}
+
+  h1 {
+    font-size: 48px;
+    line-height: 50px;
+  }
+
+  h3 {
+    font-size: 24px;
+  }
+
+    .buttonContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    margin-top: 10px;
+    padding: 0 20px;
+    gap: 10px;
+  }
+
+  .buttonContainer button {
+    width: 100%;
+    font-size: 14px;
+    padding: 14px 20px;
+    margin: 0;
+  }
+
+    .footer1 {
     padding-top: 3vh;
     align-items: center;
   }
